--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: 4.6.1
   http: 0.13.4
+  lottie: 1.3.0
   flutter: 
     sdk: flutter
 
@@ -19,4 +20,7 @@ dev_dependencies:
 
 flutter: 
   uses-material-design: true
+  assets :
+      - assets/images/animations.json
+ 
 
