--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,5 +22,8 @@ flutter:
   uses-material-design: true
   assets :
       - assets/images/animations.json
+      - assets/images/quran.png
+      - assets/images/octagon.png
+      
  
 
