--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   get: 4.6.1
   http: 0.13.4
   lottie: 1.3.0
+  get_storage: 2.0.3
   flutter: 
     sdk: flutter
 
@@ -19,11 +20,9 @@ dev_dependencies:
     sdk: flutter
 
 flutter: 
+  assets: 
+    - assets/images/animations.json
+    - assets/images/quran.png
+    - assets/images/octagon.png
   uses-material-design: true
-  assets :
-      - assets/images/animations.json
-      - assets/images/quran.png
-      - assets/images/octagon.png
-      
- 
 
